# gne

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/: bunny.csv
notebooks/: bunny.ipynb  double-helix.ipynb  noisy-circle-2d.ipynb  swiss-roll.ipynb  uniform-random.ipynb
src/gne/: __init__.py  __main__.py  config.yaml
src/gne/data/: dataset.py
src/gne/models/: Config.py  GeometricEmbedding.py
src/gne/utils/: affinities.py  complex.py  distances.py  geometries.py  geometry_to_complex.py  graph.py  loss.py  metrics.py  numerics.py  optim.py
src/gne/visualization/: visualize.py
tests/: profile_GeometricEmbedding.py  test_Config.py  test_complex.py  test_distances.py  test_geodesic.py  test_geometries.py  test_geometry_to_complex.py  test_loss.py  test_sasaki.py  test_training.py
